--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "highcharts-react-native",
+  "main": "dist",
   "version": "0.0.0",
   "scripts": {
     "start": "expo start",
@@ -7,11 +8,7 @@
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
-  "dependencies": {
-    "@highcharts/highcharts-react-native": "^1.0.0",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+  "dependencies": {    
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
